--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <title>University website</title>
         <link rel="stylesheet" href="./style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <header>
+            <nav>
+                <div class="nav-logo">
+                    <a href="index.html"> <img src="./images/logo.png" alt="logo" /></a>
+                </div>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href=""> Home </a></li>
+                        <li><a href=""> About </a></li>
+                        <li><a href=""> Courses</a></li>
+                        <li><a href=""> Blog </a></li>
+                        <li><a href=""> Contact us </a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="title">
+                <h1> World's biggest university </h1>
+                <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum etur lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum etur lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum etur lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <button> <a> Visit us to know more </a> </button>
+            </div>
+
+        </header>
 
     </body>
 </html>
