[Enhancement] Complete course section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,27 @@
                 <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum etur lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum etur lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum etur lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <button> <a> Visit us to know more </a> </button>
             </div>
-
         </header>
+        <main>
+            <section class="courses">
+                <h1> Courses </h1>
+                <p> lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="course">
+                    <article>
+                        <h3> Intermediate </h3>
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </article>
+                    <article>
+                        <h3> Degree </h3>
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </article>
+                    <article>
+                        <h3> Post Graduation </h3>
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </article>
+                </div>
+            </section>
+        </main>
 
     </body>
 </html>
