[Enhancement] Complete campus section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,32 @@
                     </article>
                 </div>
             </section>
+            <section class="campus">
+                <header>
+                    <h3> Our Global Campus</h3>
+                    <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </header>
+                <article>
+                    <div class="card">
+                        <img src="./images/london.png" />
+                        <div class="layer">
+                            <h2> London </h2>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/washington.png" />
+                        <div class="layer">
+                            <h2> Washington </h2>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/newyork.png" />
+                        <div class="layer">
+                            <h2> Newyork </h2>
+                        </div>
+                    </div>
+                </article>
+            </section>
         </main>
 
     </body>
