[Enhancement] Complete facilities section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!------ Header start------>
         <header>
             <nav>
                 <div class="nav-logo">
@@ -31,6 +32,7 @@
                 <button> <a> Visit us to know more </a> </button>
             </div>
         </header>
+        <!------ Header end ------>
         <main>
             <section class="courses">
                 <h1> Courses </h1>
@@ -52,7 +54,7 @@
             </section>
             <section class="campus">
                 <header>
-                    <h3> Our Global Campus</h3>
+                    <h1> Our Global Campus</h1>
                     <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </header>
                 <article>
@@ -75,6 +77,29 @@
                         </div>
                     </div>
                 </article>
+            </section>
+            <section class="facilities">
+                <header class="facilities-title">
+                    <h1> Our facilities </h1>
+                    <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </header>
+                <div class="facilities-items">
+                    <article>
+                        <img src="./images/library.png" alt="library" />
+                        <h3> world class library </h3>
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </article>
+                    <article>
+                        <img src="./images/library.png" alt="library" />
+                        <h3> world class library </h3>
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </article>
+                    <article>
+                        <img src="./images/library.png" alt="library" />
+                        <h3> world class library </h3>
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </article>
+                </div>
             </section>
         </main>
 
