[Enhancement] Complete testimonials section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,24 @@
                     </article>
                 </div>
             </section>
+            <section class="testimonials">
+                <header class="testimonials-header">
+                    <h1> what our student says </h1>
+                    <p> lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </header>
+                <section class="students">
+                    <article>
+                        <img src="./images/user1.jpg" alt="students" />
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h4> christine berkly </h4>
+                    </article>
+                    <article>
+                        <img src="./images/user2.jpg" alt="students" />
+                        <p> lorem ipsum dolor sit amet, consectetur adipisicing elit. lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h4> christine berkly </h4>
+                    </article>
+                </section>
+            </section>
         </main>
 
     </body>
