[Enhancement] Complete contacts section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                     </article>
                 </section>
             </section>
+            <section class="contacts">
+                <header class="contacts-header">
+                    <h3> Enroll for our various online courses <br/> anywhere from the world</h3>
+                    <a href="#"> contact us </a>
+                </header>
+            </section>
         </main>
 
     </body>
