[Enhancement] Complete footer section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/204b7eee9b.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!------ Header start------>
@@ -126,6 +127,34 @@
                 </header>
             </section>
         </main>
+        <footer>
+            <div class="footer-nav">
+                <div class="nav-logo">
+                    <a href="index.html"> <img src="./images/logo.png" alt="logo" /></a>
+                </div>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href=""> Home </a></li>
+                        <li><a href=""> About </a></li>
+                        <li><a href=""> Courses</a></li>
+                        <li><a href=""> Blog </a></li>
+                        <li><a href=""> Contact us </a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr />
+            <div class="social-media">
+                <div class="icons">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-telegram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <p> <i class="fa-solid fa-copyright"></i> all right reserved</p>
+
+            </div>
+        </footer>
 
     </body>
 </html>
